feat: add documentation to all routes, add documentation to pydantic schemas, add shield to main
