# openapi.json
@@ -1,15 +1,20 @@
 {
   "openapi": "3.1.0",
   "info": {
-    "title": "FastAPI",
-    "version": "0.1.0"
+    "title": "Files API",
+    "summary": "Store and retrieve files and file metadata.",
+    "description": "\n![Maintained by](https://img.shields.io/badge/Maintained_by-E_Camp-blue)\n\n\n[Project Github Repo](https://github.com/betsyhcamp/cloud-course-project)\n",
+    "version": "v0"
   },
   "paths": {
     "/files/{file_path}": {
       "put": {
+        "tags": [
+          "Files"
+        ],
         "summary": "Upload File",
         "description": "Upload a file.",
-        "operationId": "upload_file_files__file_path__put",
+        "operationId": "Files--upload_file",
         "parameters": [
           {
             "name": "file_path",
@@ -26,7 +31,7 @@
           "content": {
             "multipart/form-data": {
               "schema": {
-                "$ref": "#/components/schemas/Body_upload_file_files__file_path__put"
+                "$ref": "#/components/schemas/Body_Files--upload_file"
               }
             }
           }
@@ -42,6 +47,16 @@
               }
             }
           },
+          "201": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PutFileResponse"
+                }
+              }
+            },
+            "description": "Created"
+          },
           "422": {
             "description": "Validation Error",
             "content": {
@@ -55,9 +70,12 @@
         }
       },
       "head": {
+        "tags": [
+          "Files"
+        ],
         "summary": "Get File Metadata",
         "description": "Retrieve file metadata.\n\nNote: by convention, HEAD requests MUST NOT return a body in the response.",
-        "operationId": "get_file_metadata_files__file_path__head",
+        "operationId": "Files--get_file_metadata",
         "parameters": [
           {
             "name": "file_path",
@@ -76,7 +94,34 @@
               "application/json": {
                 "schema": {}
               }
+            },
+            "headers": {
+              "Content-Type": {
+                "description": "The MIME type",
+                "example": "text/plain",
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Content-Length": {
+                "description": "The size of the file in bytes.",
+                "example": 64,
+                "schema": {
+                  "type": "integer"
+                }
+              },
+              "Last Modified": {
+                "description": "The last date the file was modified.",
+                "example": "Thu, 01 Jan2024 00:00:00 GMT",
+                "schema": {
+                  "type": "string",
+                  "format": "date-time"
+                }
+              }
             }
+          },
+          "404": {
+            "description": "File not found for the given `file_path`."
           },
           "422": {
             "description": "Validation Error",
@@ -91,9 +136,60 @@
         }
       },
       "get": {
+        "tags": [
+          "Files"
+        ],
         "summary": "Get File",
         "description": "Retrieve a file.",
-        "operationId": "get_file_files__file_path__get",
+        "operationId": "Files--get_file",
+        "parameters": [
+          {
+            "name": "file_path",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "File Path"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The file content.",
+            "content": {
+              "application/json": {
+                "schema": {}
+              },
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "File not found for the given `file_path`."
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Files"
+        ],
+        "summary": "Delete File",
+        "description": "Delete a file.\n\nNOTE: DELETE requests MUST NOT return a body in the response.",
+        "operationId": "Files--delete_file",
         "parameters": [
           {
             "name": "file_path",
@@ -114,41 +210,11 @@
               }
             }
           },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "summary": "Delete File",
-        "description": "Delete a file.\n\nNOTE: DELETE requests MUST NOT return a body in the response.",
-        "operationId": "delete_file_files__file_path__delete",
-        "parameters": [
-          {
-            "name": "file_path",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "title": "File Path"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            }
+          "404": {
+            "description": "File not found for the given `file_path`."
+          },
+          "204": {
+            "description": "File deleted successfully."
           },
           "422": {
             "description": "Validation Error",
@@ -165,9 +231,12 @@
     },
     "/files": {
       "get": {
+        "tags": [
+          "Files"
+        ],
         "summary": "List Files",
         "description": "List files with pagination.",
-        "operationId": "list_files_files_get",
+        "operationId": "Files--list_files",
         "parameters": [
           {
             "name": "page_size",
@@ -242,34 +311,38 @@
   },
   "components": {
     "schemas": {
-      "Body_upload_file_files__file_path__put": {
+      "Body_Files--upload_file": {
         "properties": {
-          "file": {
+          "file_content": {
             "type": "string",
             "format": "binary",
-            "title": "File"
+            "title": "File Content"
           }
         },
         "type": "object",
         "required": [
-          "file"
+          "file_content"
         ],
-        "title": "Body_upload_file_files__file_path__put"
+        "title": "Body_Files--upload_file"
       },
       "FileMetadata": {
         "properties": {
           "file_path": {
             "type": "string",
-            "title": "File Path"
+            "title": "File Path",
+            "description": "The path of the file.",
+            "example": "path/to/file_example.txt"
           },
           "last_modified": {
             "type": "string",
             "format": "date-time",
-            "title": "Last Modified"
+            "title": "Last Modified",
+            "description": "The most recent timestamp the file was modified."
           },
           "size_bytes": {
             "type": "integer",
-            "title": "Size Bytes"
+            "title": "Size Bytes",
+            "description": "The size of the file in bytes."
           }
         },
         "type": "object",
@@ -278,7 +351,8 @@
           "last_modified",
           "size_bytes"
         ],
-        "title": "FileMetadata"
+        "title": "FileMetadata",
+        "description": "Metadata of a file."
       },
       "GetFilesResponse": {
         "properties": {
@@ -306,7 +380,18 @@
           "files",
           "next_page_token"
         ],
-        "title": "GetFilesResponse"
+        "title": "GetFilesResponse",
+        "description": "Response model for `GET /files`.",
+        "example": {
+          "files": [
+            {
+              "file_path": "path/to/file_example.txt",
+              "last_modified": "2022-01-01T00:00:00Z",
+              "size_bytes": 125
+            }
+          ],
+          "next_page_token": "next_page_token_example"
+        }
       },
       "HTTPValidationError": {
         "properties": {
@@ -325,11 +410,14 @@
         "properties": {
           "file_path": {
             "type": "string",
-            "title": "File Path"
+            "title": "File Path",
+            "description": "The path of the file.",
+            "example": "path/to/file_example.txt"
           },
           "message": {
             "type": "string",
-            "title": "Message"
+            "title": "Message",
+            "description": "A message about the operation."
           }
         },
         "type": "object",
@@ -337,7 +425,8 @@
           "file_path",
           "message"
         ],
-        "title": "PutFileResponse"
+        "title": "PutFileResponse",
+        "description": "Response model for `PUT /files/:file_path`."
       },
       "ValidationError": {
         "properties": {
